# atlas-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: __init__.py  config.py  main.py  schemas.py
src/agents/: __init__.py  base.py  competitive.py  corporate.py  cultural.py  devils_advocate.py  economic.py  regulatory.py  supervisor.py  synthesis.py  talent.py
src/api/: routes.py
src/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
src/llm/: __init__.py  factory.py
src/prompts/: competitive.yaml  corporate.yaml  cultural.yaml  devils_advocate.yaml  economic.yaml  regulatory.yaml  supervisor.yaml  synthesis.yaml  talent.yaml
src/rag/: __init__.py  embeddings.py  ingest.py  retrievers.py  vector_store.py
src/rag/loaders/: __init__.py  api_loader.py  docling_loader.py  web_loader.py
src/tools/: __init__.py  economic_data.py  web_search.py
src/ui/: app.py
src/ui/components/: input_form.py  progress.py  report_view.py
src/utils/: cache.py  logger.py  pdf_report.py
